# AoE2ScenarioParser

./: .gitignore  404.html  CHANGELOG-V1.md  CHANGELOG.md  COPYING  LICENSE  MANIFEST.in  README.md  _sidebar.md  changelog.md  generate_api_docs.py  hello_world.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.claude/: settings.local.json
AoE2ScenarioParser/: __init__.py  aoe2_file_section.py  aoe2_object_manager.py  aoe2_scenario.py  app.py  main.py  settings.py  temp_generate_conditions.py  version.py
api/: index.html
cheatsheets/: DATASETS.md  TRIGGERS.md  UNITS.md  area.md  data_triggers.md  datasets.md  message.md  triggers.md  xs.md
code_blocks/: add_koth_to_map.py  create_elevation.py  unit_abilities.py
docs/: .pages  README.md  UnknownData.txt  _sidebar.md  api-doc.md  bytesOverview.html  community.md  custom.css  dataset.xlsx  effects_dataset.xlsx  generate_api_docs.py  getting_started.md  hello_world.md  index.html  index.md  installation.md  object theory.md  quick-start.md  support.md  terrain_dataset.xlsx
docs.old/: hello_world.md  index.md  installation.md
examples/: basic_data_reading.py  example1_grid.py  example2_spawn.py  example3_techs.py  map.py  map_manager.py  players.py  units.py
getting_started/: index.html
hello_world/: index.html
installation/: index.html
requirements/: dev.txt
resources/: settings.py
results/: generated.aoe2scenario  generated_map_hd.aoe2scenario  progress.aoe2scenario
search/: search_index.json
src/: aoe2_object_manager.py  aoe2_scenario.py  app.py  (+1 more)
(+1278 files in other folders)
